[tool.poetry]
name = "habittracker"
version = "0.1.0"
description = ""
authors = ["Александр Грищнеко <tukipechenka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
pytelegrambotapi = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
